--- a/final_project/chesswebsite/css/style.css
+++ b/final_project/chesswebsite/css/style.css
@@ -156,7 +156,7 @@ input[type=submit]:hover{
 
 img{
   max-width:300px;
-  
+
   padding-bottom:30px;
 }
 
@@ -166,7 +166,7 @@ footer{
   width:100%;
   max-width:1400px;
   background-color: #193768;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   align-items: center;
   justify-content: center;
   bottom:0px;
@@ -179,6 +179,7 @@ footer{
   max-width:1400px;
   margin:0 auto;
   padding:5px;
+  text-align:center;
 }
 
 .navOpac{
@@ -201,6 +202,7 @@ footer{
 }
 
 .registrationgrid{
+  background-color: #cccccc;
 	display: grid;
   grid-template-columns: 1fr 2fr;
   grid-row-gap: 10px;
@@ -213,7 +215,15 @@ footer{
 .container1{
   background-color: #cccccc;
   max-width: 90%;
-  min-height:1000px;
+  margin:0 auto;
+  text-align:center;
+  padding: 10px;
+  z-index:0;
+}
+
+.container2{
+  background-color: #cccccc;
+  max-width: 90%;
   margin:0 auto;
   text-align:center;
   padding: 10px;
@@ -221,7 +231,7 @@ footer{
 }
 
 .containerSlide{
-  transform: translateY(100px);
+  transform: translateY(80px);
   z-index:0;
   transition: all .5s ease-in-out;
 }
@@ -235,23 +245,26 @@ footer{
   padding: 20px;
 }
 .contactGrid{
+  background-color: #cccccc;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-row-gap: 10px;
-  align-items: top;
+  align-items: center;
 	margin: 0 auto;
   text-align: center;
   padding: 40px;
-  height:400px;
+  min-height:400px;
 }
+
 .aboutGrid{
+  background-color: #cccccc;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 30px;
 	margin: 0 auto;
   text-align: center;
-  padding: 20px;
-  height:400px;
+  padding:0px 20px 40px 20px;
+
 }
 
 .info h3{
@@ -375,10 +388,18 @@ footer{
     padding:10px 10px 10px 10px;
   }
 
+  .container1{
+    padding: 40px 10px 450px 10px;
+  }
+
+  .container2{
+    padding: 10px 10px 40px 10px;
+  }
+
   .contactGrid{
     grid-template-columns: 1fr;
     grid-row-gap: 10px;
-    height:800px;
+    /* height:800px; */
     padding:10px;
   }
   .aboutGrid{
@@ -397,6 +418,9 @@ footer{
     height: 40px;
     width: 200px;
     font-size: 12px;
+  }
+  .apply{
+    padding:20px 20px 200px 20px;
   }
 
 }
@@ -457,7 +481,7 @@ footer{
   }
 
   iframe{
-    height:400px;
+    height:600px;
   }
 
   #arrowbutton{
@@ -492,7 +516,6 @@ footer{
   }
   .aboutGrid{
     grid-template-columns:1fr;
-
   }
 
   .border{
@@ -521,6 +544,10 @@ footer{
   .littleHead h1 a {
     font-size: 18px;
   }
+  .container1{
+    padding: 30px 10px 130px 10px;
+  }
+
   .containerSlide{
     transform: translateY(15px);
     z-index:0;
@@ -535,5 +562,8 @@ footer{
     border: 2px solid #193768;
     z-index:500;
   }
-
+  .apply{
+    padding:10px;
+    min-height:800px;
+  }
 }
